tests/NormalTests/paczka1/fuzzy1/19652222.err
Error in line 10: S999 S641 43,11
Error in line 6: 0359i4T S999 12,1
Error in line 5: S999 S999 13,5
Error in line 20: Oq8 S999 90,7
Error in line 33: 3ONsmU S641 68,4
Error in line 21: S999 S641 22,0
Error in line 38: S999 S716 86,5
